# webmention-client-python

./: README.md  pyproject.toml
webmention/: __init__.py
