[tool.poetry]
name = "webmention-client-python"
version = "0.0.1"
description = "Webmention client"
authors = ["Angelo Gladding <angelo@ragt.ag>"]
license = "CC0-1.0"

[tool.poetry.dependencies]
python = "^3.9"
skutterbug = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
